feat: agrego rol a usuario y renombro métodos acorde a cambios en la doc
